# rendering-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: codeql-analysis.yml
lib/SDL2/: SDL_config.h
src/: main.cpp  rendering_engine.h
src/BxDFs/: BxDF.h  BxDFs.cpp  BxDFs.h  CMakeLists.txt  Frame.h  diffuse.cpp  diffuseBRDF.cpp  phongBRDF.cpp  sampler.h
src/Cameras/: CMakeLists.txt  camera.cpp
src/Lights/: CMakeLists.txt  Light.h  Lights.cpp  Lights.h  pointlight.cpp  pointlight.h  quadlight.cpp  quadlight.h
src/Ray/: CMakeLists.txt  ray.cpp
src/Renderers/: CMakeLists.txt  Renderers.cpp  Renderers.h  renderer.cpp  renderer.h  renderer_matrix.cpp  renderer_matrix.h
src/Scenes/: CMakeLists.txt  scene.cpp
src/Shapes/: CMakeLists.txt  Shape.h  Shapes.cpp  Shapes.h  box.cpp  box.h  matrix_ops.cpp  matrix_ops.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
